--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "form-data": "^2.3.3",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.6",
-    "pg": "^7.6.0"
+    "pg": "^7.6.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
