--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.3.0",
     "nodemon": "^1.18.6",
     "pg": "^7.6.0",
