--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,2 @@
-CONNECTIONSTR = "postgres://304:rohan@localhost:5432/marketWatch"
+CONNECTIONSTR = "postgres://304:rohan@localhost:5433/marketWatch"
+APIKEY = "5991af4e309946f296b4165a121e86ae"
